Update project configuration and documentation; implement MoAG data adapter and geospatial selection features. Enhance error handling, logging, and unit tests for irrigation computation. Add support for offline mode and improve dependency management in pyproject.toml.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ dependencies = [
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
     "requests>=2.31.0",
-    "pandas>=2.1.0",
 ]
 
 [project.optional-dependencies]
@@ -21,6 +20,9 @@ dev = [
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["app"]
 
 [tool.ruff]
 line-length = 100
@@ -35,4 +37,8 @@ testpaths = ["tests"]
 python_files = "test_*.py"
 python_classes = "Test*"
 python_functions = "test_*"
+markers = [
+    "network: marks tests as requiring network access (deselect with '-m \"not network\"')",
+]
+addopts = "-m \"not network\""
 
