Implement migration to Google Gemini 2.5 Flash as the primary LLM provider; update dependencies to use `strands-agents[gemini]`; enhance agent functionality with structured output and performance optimizations; update configuration and documentation for new API key requirements; refactor tools and models for improved data handling.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,8 @@ dependencies = [
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
     "requests>=2.31.0",
-    "strands-agents>=1.0.0",
+    "strands-agents[gemini]>=1.0.0",
     "strands-agents-tools>=0.1.0",
-    "openai>=1.0.0",
     "python-dotenv>=1.0.0",
 ]
 
